# emmate

./: .gitignore  Cargo.toml  LICENSE  README.md  bash-autocompletion.sh  build.rs  mybestmelody.mid  snippets.txt
.github/workflows/: manual.yml  rust.yml
src/: app.rs  audio_setup.rs  changeset.rs  clipboard.rs  common.rs  config.rs  default-config.toml  edit_actions.rs  edit_commands.rs  engine.rs  ev.rs  lane.rs  main.rs  midi.rs  midi_vst.rs  note_sampler.rs  project.rs  range.rs  stave.rs  track.rs  track_edit.rs  track_history.rs  track_source.rs  util.rs
test/files/: 2023-07-21-1856_7457.mid  short.mid
