[package]
name = "emmate"
version = "0.4.1"
edition = "2021"
authors = ["Petr <petrglad@gmail.com>"]
description = "A MIDI editor."
homepage = "https://github.com/PetrGlad/emmate"

# See also https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = 'abort'

[profile.release]
debug = true

[dependencies]
ordered-float = "5.0.0"
eframe = { version = "0.32.0" }
egui_extras = { version = "0.32.0" }

# https://github.com/negamartin/midly
midly = { version = "0.5.3", features = ["alloc"] }

# https://github.com/RustAudio/wmidi
# wmidi = "4.0.10"

# https://docs.rs/alsa/latest/alsa/
# apt install libasound2-dev
# alsa = "0.8.1"

# https://docs.rs/midir/0.7.0/midir/struct.MidiInput.html
midir = "0.10.0"

log = "0.4.22"
env_logger = "0.11.6"

toml = "0.9.2"
serde = "1.0.216"
rmp = "0.8.14"
rmp-serde = "1.3.0"
clap = { version = "4.5.23", features = ["cargo"] }
chrono = "0.4.39"
glob = "0.3.1"
regex = "1.11.1"
flate2 = "1.0.35"
sync_cow = "0.1.1"
# strum_macros = "0.26.4"
clap_complete = "4.5.40"
indoc = "2"
dirs = "6"

num = "0.4.3"
# rhai = "1.20.1"

# These may be useful
# tokio = { version = "1.0", features = ["sync"] }
# itertools = "0.9"
# rustc-hash = "1.1"
# bytes = "1.4.0"
# enum_dispatch = "0.3.12"
# rand = "0.8.5"

[dev-dependencies]
proptest = "1.6.0"
