[package]
name = "emmate"
version = "0.4.2"
edition = "2024"
authors = ["Petr <petrglad@gmail.com>"]
description = "A MIDI editor."
homepage = "https://github.com/PetrGlad/emmate"

# See also https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = 'abort'

[profile.release]
debug = true

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
# tracing-tree = "0.2.1"

ordered-float = "5.1.0"
eframe = { version = "0.33.3"}
egui_extras = { version = "0.33.3" }
# rayon = "1.11.0"

# https://github.com/negamartin/midly
midly = { version = "0.5.3", features = ["alloc"] }

# https://github.com/RustAudio/wmidi
# wmidi = "4.0.10"

# https://docs.rs/alsa/latest/alsa/
# apt install libasound2-dev
# alsa = "0.8.1"

# https://docs.rs/midir/0.7.0/midir/struct.MidiInput.html
midir = "0.10.3"

log = "0.4.29"
env_logger = "0.11.9"

toml = "1"
serde = "1.0.228"
# rmp = "0.8.14"
rmp-serde = "1.3.1"
clap = { version = "4.6.0", features = ["cargo"] }
chrono = "0.4.44"
glob = "0.3.3"
regex = "1.12.3"
flate2 = "1.1.9"
sync_cow = "0.1.1"
# strum_macros = "0.26.4"
clap_complete = "4.6.0"
indoc = "2"
dirs = "6"

num = "0.4.3"
# rhai = "1.20.1"

# These may be useful
# tokio = { version = "1.0", features = ["sync"] }
# itertools = "0.9"
# rustc-hash = "1.1"
# bytes = "1.4.0"
# enum_dispatch = "0.3.12"
# rand = "0.8.5"

[dev-dependencies]
proptest = "1.6.0"
